// Copyright (c) 2018 IoTeX
// This is an alpha (internal) release and is not suitable for production. This source code is provided 'as is' and no
// warranties are given as to title or non-infringement, merchantability or fitness for purpose and, to the extent
// permitted by law, all liability for your use of the code is disclaimed. This source code is governed by Apache
// License 2.0 that can be found in the LICENSE file.

// To compile the proto, run:
//      protoc --go_out=plugins=grpc:. *.proto
syntax = "proto3";
package iproto;

// The blockchain service definition
service ChainService {
    rpc CreateRawTransfer (CreateRawTransferRequest) returns (CreateRawTransferResponse) {}
    rpc CreateRawVote (CreateRawVoteRequest) returns (CreateRawVoteResponse) {}
    rpc SendTransfer (SendTransferRequest) returns (SendTransferResponse) {}
    rpc SendVote (SendVoteRequest) returns (SendVoteResponse) {}
}

message CreateRawTransferRequest {
    string sender = 1;
    string recipient = 2;
    bytes amount  = 3;
    uint64 nonce = 4;
    bytes data = 5;
}

message CreateRawTransferResponse {
    bytes serialized_transfer = 1;
}

message CreateRawVoteRequest {
    bytes voter = 1;
    bytes votee = 2;
    uint64 nonce = 3;
}

message CreateRawVoteResponse {
    bytes serialized_vote = 1;
}

message SendTransferRequest {
    bytes serialized_transfer = 1;
}

message SendTransferResponse {
}

message SendVoteRequest {
    bytes serialized_vote = 1;
}

message SendVoteResponse {
}
